--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -180,7 +180,7 @@
                     <p>Aprenda a trabalhar com HTML5 e CSS3 para desenvolver seus projetos e entregar páginas que estejam dentro dos padrões da WEB seguindo as boas práticas!</p>
                 </header>
 
-                <div class="main_course_content">
+                <div class="main_course_about_content">
                     <article>
                         <header>
                             <h2>Curso 100% Online</h2>
@@ -210,114 +210,118 @@
                     </article>
                 </div>
 
-                <article>
-                    <header>
-                        <h2>Curso considerado 5 estrelas por nossos 100 alunos matriculados</h2>
-                    </header>
+                <div class="main_course_rating">
+                    <div class="main_course_rating_content">
+                        <article class="main_course_rating_content_title">
+                            <header>
+                                <h2>Curso considerado 5 estrelas por nossos 100 alunos matriculados</h2>
+                            </header>
 
-                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                </article>
+                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                        </article>
 
-                <section>
-                    <header>
-                        <h2>Veja o que nossos alunos estão falando do curso</h2>
-                    </header>
+                        <section class="main_course_rating_content_comment">
+                            <header>
+                                <h2>Veja o que nossos alunos estão falando do curso</h2>
+                            </header>
 
-                    <article>
-                        <header>
-                            <h3>Gustavo Web</h3>
-                            <p>06/02/2020</p>
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                        </header>
+                            <article>
+                                <header>
+                                    <h3>Gustavo Web</h3>
+                                    <p>06/02/2020</p>
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                </header>
 
-                        <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
-                    </article>
+                                <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
+                            </article>
 
-                    <article>
-                        <header>
-                            <h3>Gustavo Web</h3>
-                            <p>06/02/2020</p>
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                        </header>
+                            <article>
+                                <header>
+                                    <h3>Gustavo Web</h3>
+                                    <p>06/02/2020</p>
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                </header>
 
-                        <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
-                    </article>
+                                <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
+                            </article>
 
-                    <article>
-                        <header>
-                            <h3>Gustavo Web</h3>
-                            <p>06/02/2020</p>
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                        </header>
+                            <article>
+                                <header>
+                                    <h3>Gustavo Web</h3>
+                                    <p>06/02/2020</p>
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                </header>
 
-                        <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
-                    </article>
+                                <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
+                            </article>
 
-                    <article>
-                        <header>
-                            <h3>Gustavo Web</h3>
-                            <p>06/02/2020</p>
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                        </header>
+                            <article>
+                                <header>
+                                    <h3>Gustavo Web</h3>
+                                    <p>06/02/2020</p>
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                </header>
 
-                        <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
-                    </article>
+                                <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
+                            </article>
 
-                    <article>
-                        <header>
-                            <h3>Gustavo Web</h3>
-                            <p>06/02/2020</p>
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                        </header>
+                            <article>
+                                <header>
+                                    <h3>Gustavo Web</h3>
+                                    <p>06/02/2020</p>
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                </header>
 
-                        <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
-                    </article>
+                                <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
+                            </article>
 
-                    <article>
-                        <header>
-                            <h3>Gustavo Web</h3>
-                            <p>06/02/2020</p>
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                            <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
-                        </header>
+                            <article>
+                                <header>
+                                    <h3>Gustavo Web</h3>
+                                    <p>06/02/2020</p>
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                    <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
+                                </header>
 
-                        <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
-                    </article>
-                </section>
+                                <p>O conteúdo é fantástico, eu não tinha conhecimento nenhum e agora estou desenvolvendo minhas páginas em HTML5 sem problemas</p>
+                            </article>
+                        </section>
+                    </div>
+                </div>
             </section>
 
             <section>
