Finalização da responsividade da primeira dobra

--- a/04-estilizando-conteudo/index.html
+++ b/04-estilizando-conteudo/index.html
@@ -19,7 +19,7 @@
                     <img src="img/logo.png" alt="Bem vindo ao curso HTML5 & CSS3 Essentials" title="Bem vindo ao curso HTML5 & CSS3 Essentials">
                 </a>
 
-                <nav class="main_header_content_menu" style="display: none;">
+                <nav class="main_header_content_menu">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Blog</a></li>
