Servindo Protocolo Google+

--- a/06-otimização-social/index.html
+++ b/06-otimização-social/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="pt-br">
+<html lang="pt-br" itemscope itemtype="https://schema.org/WebSite">
     <head>
         <title>HTML5 & CSS3 Essentials</title>
         <meta charset="UTF-8">
@@ -10,7 +10,19 @@
         <meta name="description" content="Projeto prático do curso HTML5 e CSS3 Essentials criado pela UpInside Treinamentos.">
         <meta name="robots" content="index, follow">
 
-        <link rel="canonical" href="http://localhost/html5-css3-essentials/04-estilizando-conteudo/">
+        <!-- Meta Tag que evita duplicidade na url -->
+        <link rel="canonical" href="http://localhost/html5-css3-essentials/06-otimização-social/">
+
+        <!-- // META TAGS GOOGLE+ // -->
+        <!-- Quando a rede social buscar o name da página, é nessa meta tag que ele virá. Mantendo a coesão com o título principal da nossa página -->
+        <meta itemprop="name" content="HTML5 & CSS3 Essentials">
+        <!-- Quando a rede social buscar o titulo/descrição, é nessa meta tag que ele virá -->
+        <meta itemprop="description" content="Projeto prático do curso HTML5 e CSS3 Essentials criado pela UpInside Treinamentos.">
+        <!-- Quando a rede social buscar uma imagem da nossa página por alguém ter feito um compartilhamento, essa será a imagem apresentada e otimizada pela própria rede social -->
+        <meta itemprop="image" content="http://localhost/html5-css3-essentials/06-otimização-social/img/upinside.jpg">
+        <!-- Evitando duplicidade na url -->
+        <meta itemprop="url" content="http://localhost/html5-css3-essentials/06-otimização-social/">
+        
 
         <link rel="stylesheet" type="text/css" href="_cdn/css/fonticon.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
