--- a/06-otimização-social/index.html
+++ b/06-otimização-social/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+        <!-- META TAG'S => Utilizado para que os motores de busca identifiquem as características da nossa página, quando for compartilhado qualquer tipo de conteúdo do nosso site-->
         <meta name="description" content="Projeto prático do curso HTML5 e CSS3 Essentials criado pela UpInside Treinamentos.">
         <meta name="robots" content="index, follow">
 
@@ -14,15 +15,23 @@
         <link rel="canonical" href="http://localhost/html5-css3-essentials/06-otimização-social/">
 
         <!-- // META TAGS GOOGLE+ // -->
-        <!-- Quando a rede social buscar o name da página, é nessa meta tag que ele virá. Mantendo a coesão com o título principal da nossa página -->
         <meta itemprop="name" content="HTML5 & CSS3 Essentials">
-        <!-- Quando a rede social buscar o titulo/descrição, é nessa meta tag que ele virá -->
         <meta itemprop="description" content="Projeto prático do curso HTML5 e CSS3 Essentials criado pela UpInside Treinamentos.">
-        <!-- Quando a rede social buscar uma imagem da nossa página por alguém ter feito um compartilhamento, essa será a imagem apresentada e otimizada pela própria rede social -->
         <meta itemprop="image" content="http://localhost/html5-css3-essentials/06-otimização-social/img/upinside.jpg">
-        <!-- Evitando duplicidade na url -->
         <meta itemprop="url" content="http://localhost/html5-css3-essentials/06-otimização-social/">
         
+        <!-- // META TAGS FACEBOOK // -->
+        <meta property="og:url" content="http://localhost/html5-css3-essentials/06-otimização-social/" />
+        <meta property="og:type" content="article" />
+        <meta property="og:title" content="HTML5 & CSS3 Essentials" />
+        <meta property="og:description" content="Projeto prático do curso HTML5 e CSS3 Essentials criado pela UpInside Treinamentos." />
+        <meta property="og:image" content="http://localhost/html5-css3-essentials/06-otimização-social/img/upinside.jpg" />
+        <meta property="og:image-width" content="1200" />
+        <meta property="og:image-height" content="630" />
+        <meta property="fb:app_id" content="Número do seu app do facebook" />
+        <meta property="og:locale" content="pt_BR" />
+        <meta property="article:author" content="https://www.facebook.com/ricardo.baldrez.3" />
+        <meta property="article:publisher" content="https://www.facebook.com/upinside" />
 
         <link rel="stylesheet" type="text/css" href="_cdn/css/fonticon.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
