Servindo Protocolo Twitter

--- a/06-otimização-social/index.html
+++ b/06-otimização-social/index.html
@@ -33,6 +33,15 @@
         <meta property="article:author" content="https://www.facebook.com/ricardo.baldrez.3" />
         <meta property="article:publisher" content="https://www.facebook.com/upinside" />
 
+        <!-- // META TAGS TWITTER // -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:domain" content="https://www.upinside.com.br">
+        <meta name="twitter:url" content="http://localhost/html5-css3-essentials/06-otimização-social/">
+        <meta name="twitter:image" content="http://localhost/html5-css3-essentials/06-otimização-social/img/upinside.jpg">
+        <meta name="twitter:creator" content="@ricardobarbosa">
+        <meta name="twitter:title" content="HTML5 & CSS3 Essentials">
+        <meta name="twitter:description" content="Projeto prático do curso HTML5 e CSS3 Essentials criado pela UpInside Treinamentos.">
+
         <link rel="stylesheet" type="text/css" href="_cdn/css/fonticon.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="_cdn/css/boot.css">
