--- a/06-otimização-social/index.html
+++ b/06-otimização-social/index.html
@@ -572,5 +572,16 @@
 
         <script src="_cdn/jquery-3.4.1.min.js" type="text/javascript"></script>
         <script src="_cdn/main.js" type="text/javascript"></script>
+
+        <!-- Instalando GOOGLE ANALYTICS (Monitoramento do seu site/app) -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162366737-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-162366737-1');
+        </script>
     </body>
 </html>
