Instalando Pixel Google Adwords

--- a/06-otimização-social/index.html
+++ b/06-otimização-social/index.html
@@ -583,5 +583,18 @@
 
             gtag('config', 'UA-162366737-1');
         </script>
+
+        <!-- Usado para campanhas -->
+        <!-- Global site tag (gtag.js) - Adwords:1008830755 -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=AW-1008830755"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gTag() {
+                dataLayer.push(arguments);
+            }
+            gTag('js', new Date());
+
+            gTag('config', 'AW-1008830755')
+        </script>
     </body>
 </html>
