--- a/07-microformatos/index.html
+++ b/07-microformatos/index.html
@@ -328,7 +328,7 @@
                     </header>
 
                     <div class="ds_none" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-                        <span itemprop="price">R$1000,00</span>
+                        <span itemprop="priceCurrency" content="real">R$</span><span itemprop="price" content="1000.00"></span>
                     </div>
 
                     <div class="main_course_about_content">
@@ -363,9 +363,10 @@
 
                     <div class="main_course_rating">
                         <div class="main_course_rating_content">
-                            <article class="main_course_rating_content_title">
+                            <article class="main_course_rating_content_title" itemprop="aggregateRating" itemscope itemtype="https://schema.org/aggregateRating">
                                 <header>
-                                    <h2>Curso considerado 5 estrelas por nossos 100 alunos matriculados</h2>
+                                    <h2>Curso considerado <span itemprop="ratingValue">5</span> estrelas por nossos 100 alunos matriculados</h2>
+                                    <meta itemprop="ratingCount" content="6">
                                 </header>
 
                                 <img src="img/star.png" alt="Review do curso HTML5 e CSS3 Essentials" title="Review do curso HTML5 e CSS3 Essentials">
