Microformatos em Personagem

--- a/07-microformatos/index.html
+++ b/07-microformatos/index.html
@@ -563,15 +563,15 @@
                         </section>
                     </div>
 
-                    <section class="main_tutor">
+                    <section class="main_tutor" itemprop="member" itemscope itemtype="https://schema.org/Person">
                         <div class="main_tutor_content">
                             <header>
-                                <h1>Conheça o Gustavo Web, seu tutor nesse curso</h1>
-                                <p>Eu vou te ajudar a criar sua webpage com HTML5 e CSS3</p>
+                                <h1>Conheça o <span itemprop="name">Gustavo Web</span>, seu tutor nesse curso</h1>
+                                <p itemprop="description">Eu vou te ajudar a criar sua webpage com HTML5 e CSS3</p>
                             </header>
 
                             <div class="main_tutor_content_img">
-                                <img src="img/gustavoweb.jpg" alt="Foto de Gustavo Web" title="Foto de Gustavo Web">
+                                <img src="img/gustavoweb.jpg" alt="Foto de Gustavo Web" title="Foto de Gustavo Web" itemprop="image">
                             </div>
 
                             <article class="main_tutor_content_formation">
@@ -589,27 +589,27 @@
 
                                 <article>
                                     <header>
-                                        <h3><a href="#" class="icon-facebook">Meu Facebook</a></h3>
+                                        <h3><a href="#" class="icon-facebook" itemprop="url">Meu Facebook</a></h3>
                                     </header>
                                 </article>
 
                                 <article>
 
                                     <header>
-                                        <h3><a href="#" class="icon-facebook2">Minha Fanpage</a></h3>
+                                        <h3><a href="#" class="icon-facebook2" itemprop="url">Minha Fanpage</a></h3>
                                     </header>
                                 </article>
 
                                 <article>
 
                                     <header>
-                                        <h3><a href="#" class="icon-google-plus2">Meu Google+</a></h3>
+                                        <h3><a href="#" class="icon-google-plus2" itemprop="url">Meu Google+</a></h3>
                                     </header>
                                 </article>
 
                                 <article>
                                     <header>
-                                        <h3><a href="#" class="icon-instagram">Meu Instagram</a></h3>
+                                        <h3><a href="#" class="icon-instagram" itemprop="url">Meu Instagram</a></h3>
                                     </header>
                                 </article>
                             </section>
